# museomorph

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  manifest.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.scripts.json  vite.config.ts  vitest.config.ts
.github/workflows/: validate.yml
docs/: MuseoMorph_Forensic_Rubric_v1_3_full.md  NOTES.md  PRD.md  UNIVERSAL COMPANION SPEC PACK (v1.0).md  Universal_Museum-Grade_Framework_v4.4.md  Universal_Museum-Grade_Prompt_Framework_v4.3_(NanoBanana_Edition).md  Universal_Prompt_Framework_v4.2.md  format_comparison.md  ratio_policy.md  streamlined_style_protocol_v2_4_full.md
docs/Nano_banana_pro_docs/: Edge_Fidelity_Dictionary_v1_0.md  Flag_Dictionary_v2_3.md  Historical_Hair_Makeup_Dictionary_v1_1.md  Likeness_Taxonomy_v1_0.md  MuseoMorph_Execution_Engine_v1_3.md  MuseoMorph_Execution_Engine_v1_4.md  MuseoMorph_Forensic_Rubric_v1_5.md  Photography_Dictionary_v1_3.md  Universal_Museum-Grade_Framework_v5_3.md
public/: manifest.json
scripts/: build-manifest.ts  schema.ts  validate-style.ts
src/: App.css  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ApiKeyModal.tsx  StyleImporterModal.tsx
src/hooks/: useFavorites.ts  useRecentStyles.ts
styles/: _TEMPLATE.md
styles-source/archive/: European_Comics_Cover_Style.md  Expressionist_Analysis.md  Record_Cover_Analysis.md  anime_analysis.md  dutch_golden_age_profiles.md  (+22 more)
(+238 files in other folders)
