[package]
name = "museomorph"
version = "0.1.0"
description = "MuseoMorph desktop art lab"
authors = ["MuseoMorph Contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "museomorph_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.4.1", features = [] }
